--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-br from-gray-900 to-gray-700 text-center relative overflow-hidden">
         <canvas id="particles" class="absolute inset-0 z-0"></canvas>
         <div class="max-w-4xl mx-auto px-4 z-10">
-            <img src="images/Avatar.gif" alt="Jimbo's Avatar" class="w-32 h-32 rounded-full mx-auto mb-6 border-2 border-neon-green">
+            <img src="Avatar.gif" alt="Jimbo's Avatar" class="w-32 h-32 rounded-full mx-auto mb-6 border-2 border-neon-green">
             <h1 class="text-5xl font-bold mb-4 text-neon-green">Hi, I'm Jimbo!</h1>
             <p class="text-xl mb-6 text-gray-300">An Experienced Discord Bot developer and Web Developer!<span id="typing-text" class="font-semibold text-neon-green"></span></p>
             <a href="#projects" class="bg-neon-green text-gray-900 px-6 py-3 rounded-full font-semibold hover:bg-neon-green-hover transition transform hover:scale-105">Explore My Work</a>
@@ -86,7 +86,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project Card 1 -->
                 <div class="project-card bg-gray-800 rounded-lg shadow-lg overflow-hidden">
-                    <img src="images/SelfBot.png" alt="Discord SelfBot" class="w-full h-48 object-cover">
+                    <img src="SelfBot.png" alt="Discord SelfBot" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-100">Discord Self Bot</h3>
                         <p class="text-gray-400 mb-4">A Discord selfbot automates user account actions, enhancing personal experience.</p>
@@ -104,7 +104,7 @@
                 </div>
                 <!-- Project Card 3 -->
                 <div class="project-card bg-gray-800 rounded-lg shadow-lg overflow-hidden">
-                    <img src="images/UtilBot.png" alt="Fun Bot" class="w-full h-48 object-cover">
+                    <img src="UtilBot.png" alt="Fun Bot" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-100">Discord Utility Bot</h3>
                         <p class="text-gray-400 mb-4">Utility Bot with over 20 useful commands for server</p>
